--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "build": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
     "develop": "gatsby develop",
-    "format": "prettier --write 'src/**/*.js' 'data/siteConfig.js' 'gatsby-*.js' 'scripts/*.js'",
+    "format": "prettier --write 'src/**/*.js' 'data/siteConfig.js' 'gatsby-*.js'",
     "lh": "lighthousebot",
     "semantic-release": "semantic-release",
     "start": "gatsby develop",
